# gridforeman

./: README.md
server/: .env  Cargo.toml
server/config/: energy-meter-catalog.json
server/examples/: ocpp_sim.rs
server/src/: api.rs  app_state.rs  badges.rs  db.rs  energy_meter_catalog.rs  energy_meter_runtime.rs  greptime.rs  main.rs  ocpp_runtime.rs  ocpp_v16.rs  ocpp_v201.rs  realtime.rs  site_config.rs  users.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  appTypes.ts  stations.ts  styles.css
web/src/components/: AppFrame.tsx  AppModal.tsx
web/src/components/modals/: BadgeFormModalBody.tsx  ModalShell.tsx  StationControlsModalBody.tsx  StationLocationModalBody.tsx  UserFormModalBody.tsx  modalTypes.ts
web/src/hooks/: useAppState.ts
web/src/pages/: BadgesPage.tsx  EnergyMetersPage.tsx  EventsPage.tsx  SitePage.tsx  StationsPage.tsx  TransactionsPage.tsx  UsersPage.tsx
