[package]
name = "grid-foreman"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "=0.4.45", features = ["serde", "clock"] }
serde_json = "=1.0.150"
serde = { version = "=1.0.228", features = ["derive"] }
rust-ocpp = { version = "2.0", features = ["v1_6", "v2_0_1"] }
futures-util = "=0.3.31"
dotenvy = "=0.15.7"
tokio = { version = "=1.52.3", features = ["full"] }
tokio-tungstenite = "=0.17.2"
tokio-postgres = { version = "=0.7.7", features = ["with-chrono-0_4"] }
axum = { version = "=0.8.6", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
